@@ -1,3 +1,4 @@
+
 # -*- tcl -*-
 # ### ### ### ######### ######### #########
 ## Overview
@@ -104,8 +105,10 @@ proc ::platform::shell::LOCATE {bv ov} {
     # here. If the found package is wrapped we copy the code somewhere
     # where the spawned shell will be able to read it.
 
-    # Note: This code depends on the form of the 'provide' command
-    # generated by tm.tcl. Keep them in sync. See Bug 2255235.
+    # This code is brittle, it needs has to adapt to whatever changes
+    # are made to the TM code, i.e. the provide statement generated by
+    # tm.tcl
+
     set pl [package ifneeded platform [package require platform]]
     set base [lindex $pl end]
 
